<resources>
    <string name="app_name">classroom</string>
    <string name="title_activity_loginhome">Loginhome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_draw">Draw</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="Username">Username</string>
    <string name="TextView">TextView</string>
    <string name="navigation_pro">โปรไฟล์</string>
    <string name="navigation_table">ตารางเรียน</string>
    <string name="navigation_calen">ปฏิทินสอบ</string>
    <string name="navigation_set">การตั้งค่า</string>
    <string name="user_name">User Name</string>
    <string name="add_data">เพิ่มช่องชั้นเรียน</string>
    <string name="saveButtom">บันทึก</string>
    <string name="nameClass">ชื่อชั้นเรียน</string>
    <string name="nameTeacher">ครู/อาจารย์</string>
    <string name="room">ห้อง</string>
    <string name="title_activity_card_slide">CardSlideActivity</string>
    <string name="cancle">Cancle</string>
    <string name="ok">Ok</string>
    <string name="no">ยกเลิก</string>
    <string name="start">เวลาเริ่ม</string>
    <string name="end">เวลาสิ้นสุด</string>
    <string name="finals">สอบปลายภาค</string>
    <string name="midterm">สอบกลางภาค</string>
    <string name="editdata">แก้ไขชั้นเรียน</string>
    <string name="sure">ลบชั้นเรียน  ?</string>

    <string name="textview1">สามารถรีเซ็ตตารางเรียนทั้งหมดได้หรือไม่?</string>
    <string name="textview2">คุณสามารถรีเซ็ตตารางเรียนทั้งหมดได้</string>
    <string name="textview3">เข้าไปที่ การตั้งค่า>รีเซ็ตตารางทั้งหมด>ตกลง</string>
    <string name="textview4">ขั้นตอนการลบชั้นเรียนมี 2 วิธี ดังนี้</string>
    <string name="textview5">สามารถลบชั้นเรียนด้วยวิธีใดได้บ้าง ?</string>
    <string name="textview6">1.หน้าตารางเรียน "กดเลือก" ชั้นเรียนที่</string>
    <string name="textview7">ต้องการลบ > ลบชั้นเรียน > ตกลง</string>
    <string name="textview8">2.หน้า ตารางเรียน "กดค้าง" ชั้นเรียนที่ต้องการลบ>ตกลง</string>
    <string name="textview9">สามารถแก้ไข Username ได้หรือไม่ ?</string>
    <string name="textview10">คุณสามารถแก้ไข username ของคุณได้</string>
    <string name="textview11">เข้าไปที่ โปรไฟล์>กดที่เมนู ___ >เแก้ไขโปรไฟล์</string>
    <string name="textview12">สามารถเปลี่ยนรูป โปรไฟล์ ที่ฉันตั้งไว้ได้หรือไม่?</string>
    <string name="textview13">คุณสามารถเปลี่ยนรูปโปรไฟล์ของคุณได้ เข้าไป</string>
    <string name="textview14">ที่โปรไฟล์>กดที่เมนู ___ >แก้ไขโปรไฟล์></string>
    <string name="textview15">สามารถแก้ไขชื่อตารางเรียนได้หรือไม่?</string>
    <string name="textview16">คุณสามารถแก้ไขชื่อตารางเรียนของคุณได้</string>
    <string name="textview17">เข้าไปที่ ตารางเรียน>กดที่เครื่องหมายแก้ไข </string>
    <string name="ImageView">ImageView</string>

</resources>
