<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".FAQs">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="1"
                android:text="FAQs"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/textview1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:text="@string/textview2"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:text="@string/textview3"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100dp"
            android:text="@string/textview4"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/TextView5"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:text="@string/textview5"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="120dp"
            android:text="@string/textview6"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/TextView7"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
            android:text="@string/textview7"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/TextView8"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="77dp"
            android:layout_marginTop="161dp"
            android:layout_marginBottom="269dp"
            android:text="@string/textview8"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TextView9"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="243dp"
            android:text="@string/textview9"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="216dp"
            android:text="@string/textview10"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TextView11"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="191dp"
            android:text="@string/textview11"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TextView12"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="169dp"
            android:text="@string/textview12"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView13"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="149dp"
            android:text="@string/textview13"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TextView14"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="128dp"
            android:text="@string/textview14"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TextView15"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="107dp"
            android:text="@string/textview15"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView16"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="88dp"
            android:text="@string/textview16"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TextView17"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="69dp"
            android:text="@string/textview17"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/ImageView1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/textview1"
            android:src="@drawable/qa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ImageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/textview1"
            android:src="@drawable/qa" />

        <ImageView
            android:id="@+id/ImageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="180dp"
            android:contentDescription="@string/textview1"
            app:srcCompat="@drawable/qa" />

        <ImageView
            android:id="@+id/ImageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="255dp"
            android:contentDescription="@string/textview1"
            android:src="@drawable/qa" />

        <ImageView
            android:id="@+id/ImageView5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="315dp"
            android:contentDescription="@string/textview1"
            android:src="@drawable/qa" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="11dp"
                android:layout_height="9dp"
                android:layout_marginStart="296dp"
                android:layout_marginTop="365dp"
                android:layout_marginEnd="77dp"
                android:layout_marginBottom="76dp"
                android:contentDescription="@string/textview1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/edit" />

            <ImageView
                android:id="@+id/hamburger1"
                android:layout_width="19dp"
                android:layout_height="16dp"
                android:layout_marginStart="181dp"
                android:layout_marginTop="303dp"
                android:layout_marginEnd="184dp"
                android:contentDescription="@string/textview1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hamburger_icon" />

            <ImageView
                android:id="@+id/hamburger2"
                android:layout_width="19dp"
                android:layout_height="16dp"
                android:layout_marginStart="215dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="194dp"
                android:contentDescription="@string/textview1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hamburger_icon" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</LinearLayout>

