<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:id="@+id/headBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="100dp"
            android:gravity="center"
            android:text="ชื่อวิชา"
            android:textColor="@color/colorBlack"
            android:textSize="17dp" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:src="@drawable/back1"
            android:scaleType="center"
            android:background="@color/colorPrimary"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="205dp"
        android:background="@color/colorGray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textshow1"
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="ชื่อชั้นเรียน :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textshow2"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="ครู/อาจารย์  :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textshow3"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:text="ห้อง  :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textDB1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@+id/textshow1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="95dp"
            android:layout_marginTop="0dp"
            android:hint="ชื่อวิชา"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textDB2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:hint="ชื่ออาจารย์"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textDB3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="50dp"
            android:hint="เลขห้องเรียน"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorGray">

        <TextView
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/midterm"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="95dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="วัน/เดือน/ปี   :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dateMidterm"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="40dp"
            android:hint="วัน/เดือน/ปี"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="95dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="70dp"
            android:text="เวลา  :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/StartMidterm"
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="70dp"
            android:hint="@string/start"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="95dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:text="ห้องสอบ  :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/roomMidterm"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="100dp"
            android:hint="ห้อง"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"

            android:layout_marginTop="140dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="145dp"
            android:text="@string/finals"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="95dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="180dp"
            android:text="วัน/เดือน/ปี   :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dateFinal"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="180dp"
            android:hint="วัน/เดือน/ปี"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="95dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="210dp"
            android:text="เวลา  :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/StartFinal"
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="210dp"
            android:hint="@string/start"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="95dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="240dp"
            android:text="ห้องสอบ  :"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/roomFinal"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="240dp"
            android:hint="ห้อง"
            android:textColor="@color/white" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="300dp"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btEdit"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorGray"
            android:scaleType="fitStart"
            android:src="@drawable/imagee" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"


            android:background="@color/white" />

        <ImageButton
            android:id="@+id/btDelete"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/colorGray"
            android:scaleType="fitStart"
            android:src="@drawable/imagede" />
    </LinearLayout>
</RelativeLayout>